--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">RxRetrofit</string>
     <string name="open">Open</string>
     <string name="close">Close</string>
+    <string name="description">由于微信每个版本都会出现不同的id，我们必须更改寻找控件的id实现点击事件</string>
+    <string name="label">微信6.3.32版自动抢红包</string>
 </resources>
